admin page commited in brach

--- a/admin.html
+++ b/admin.html
@@ -20,6 +20,9 @@
         <div class="admin-actions">
             <div class="action-card">
                 <h2>Manage Users</h2>
+                <p style="color:#555; font-size:15px; margin:12px 0 20px;">
+                    Add, edit, or remove users from the system. Ensure only authorized access.
+                </p>
                 <button onclick="alert('Manage Users clicked')">Go</button>
             </div>
             <div class="action-card">
