--- a/manger.html
+++ b/manger.html
@@ -19,7 +19,7 @@
         <h1>Manager Dashboard</h1>
         <nav>
             <a href="#">Home</a>
-            <a href="#">Reports</a>
+            <a href="#">Report</a>
             <a href="#">Team</a>
             <a href="#">Settings</a>
         </nav>
