--- a/user.html
+++ b/user.html
@@ -24,7 +24,7 @@
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
 
-            <button type="submit">Save</button>
+            <button type="submit">Save's</button>
         </form>
     </div>
 </body>
